# MxMoE

./: .clang-format  .clangd  .gitignore  .gitmodules  README.md  bits_model-1.lp  logger_utils.py  project_config.py  requirements.txt  run_mxmoe_gg.py
mxmoe/kernels/: compose_kernel.py  gen_workload.py  kernel_sketch.py  qconfig.py  tile_config.py
mxmoe/kernels/src/: CMakeLists.txt  hz_fused.cuh  ref_bind.cu  ref_impl.cuh  setup.py  test.cu  test_utils.h
mxmoe/kernels/src/include/: cta_gemm.cuh  cuda_utils.cuh  helper.h  layout.cuh  mm_tile.cuh  quantize.cuh  registry.cuh  tile_scheduler.cuh
mxmoe/quant/: bits_solver.py  data_utils.py  evaluator.py  gptq.py  hadamard_utils.py  moe_tracer.py  moe_utils.py  quant.py  rotation.py
perf/: performance_table.json
